[package]
name = "shatters-relay"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/SuperpositionLabs/shatters-relay"

[features]
default = []
dev-tls = ["rcgen"]

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }

quinn = "0.11"

rcgen = { version = "0.13", optional = true }
rustls-pemfile = "2"
rustls = { version = "0.23", features = ["ring"] }

dashmap = "6"

ed25519-dalek = { version = "2", features = ["rand_core"] }

parking_lot = "0.12"

serde = { version = "1", features = ["derive"] }
toml = "0.8"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

thiserror = "2"

[build-dependencies]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
